<resources>
    <string name="app_name">HackatonV2</string>
    <string name="title_activity_principal2">Principal2</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Ver Query</string>
    <string name="tab_text_2">Contribuir</string>
    <string name="tab_text_3">Listar Contribuciones</string>
    <string name="imagen">imagen</string>
    <string name="observacion">Observacion:</string>
    <string name="registrar">Registrar</string>
    <string name="longitud">Longitud:</string>
    <string name="latitud">Latitud:</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="codigo">CODIGO</string>
    <string name="detalle">Detalle</string>
    <string name="direccion">Direccion</string>
</resources>
