<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:clipToPadding="false"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".SenalFormActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        app:cardBackgroundColor="@color/colorBackgroundWhite">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_foto"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:onClick="capturarFoto"
                        android:src="@drawable/ic_photo_camera" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">


                    <EditText
                        android:id="@+id/et_codigo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/codigo"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="24sp"
                        android:textStyle="bold" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/txtColor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/ubicacion"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/latitud"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/latitud"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/longitud"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/longitud"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/direccion"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_ubicacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:inputType="textMultiLine"
                        android:maxLines="10" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/detalle"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_detalle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:inputType="textMultiLine"
                        android:maxLines="10" />
                </LinearLayout>

                <Button

                    android:id="@+id/enviar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorPrimary"
                    android:onClick="registrarDatos"
                    android:text="@string/registrar"
                    android:textColor="@color/txtColor"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

    </android.support.v7.widget.CardView>

</LinearLayout>